Changelog for BannerY.

1.0.1 pl (1*.09.2012)
============
- Fixed ads/update processor, so now it not change idx of existing AdPosition

1.0.0 pl (13.09.2012)
============
- Renamed to BannerY
- Added text field "description" for Ads.
- UI improvements. Now you can view all Ads of Position in popup window and add/remove/sort them.
- Added drag-n-drop sorting feature for Ads in Position for specifying exact order of displaying.
- Added properties for snippet BannerX and new sortby - "idx".
- Added quick enable\disable ads in context menu.
- Added filter by position in ads grid
- Added search in ads and positions grids


0.2.2 pl (06.09.2012)
=============
- Class based processors / controllers
- GET vars of clickout URL are now available as placeholders in banner URL (?id=123 => [[+id]])
  (this change is sponsored by bungalowparkoverzicht.nl)


0.2.1 pl (30.08.2012)
=============
- Some UI changes and fixes
- Browser now opens directory of current banner


0.2.0 beta (23.04.2012)
=============
- Added russian lexicon
- Fixed position delete issue
- Fix error when creating ads with no positions
- Stateful tabs
- Positions live update
- Change order of items in context menu
- Add support for [[~id]] links for banners
- Improve images preview
- Add images in ads grid
- Add showing update windows on double click in grid


0.1.0 alpha
=============
- First public version