@@ -3,6 +3,7 @@ Changelog for BannerY.
 1.0.1 pl (1*.09.2012)
 ============
 - Fixed ads/update processor, so now it not change idx of existing AdPosition
+- Added combobox for easy selecting of site resources. Also you can specify http address.
 
 1.0.0 pl (13.09.2012)
 ============
